// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component with children props 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
  style={undefined}
>
  <div>
    Hello
  </div>
</ul>
`;

exports[`List component with style props 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
  style={
    Object {
      "width": 100,
    }
  }
/>
`;

exports[`ListItem  with children props 1`] = `
<li
<<<<<<< HEAD
  className="MuiListItem-root-11 MuiListItem-default-14 MuiListItem-gutters-18"
=======
  className="MuiListItem-root-11 MuiListItem-default-14 MuiListItem-gutters-19"
>>>>>>> abe0c27cbfbc48ff736e295ad073f2440bae9139
  disabled={false}
  onClick={undefined}
>
  <div
<<<<<<< HEAD
    className="MuiListItemText-root-22"
  >
    <span
      className="MuiTypography-root-28 MuiTypography-subheading-35 MuiListItemText-primary-25"
=======
    className="MuiListItemText-root-23"
  >
    <span
      className="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
>>>>>>> abe0c27cbfbc48ff736e295ad073f2440bae9139
    >
      Hello
    </span>
  </div>
</li>
`;

exports[`ListItem with   style props 1`] = `
<li
<<<<<<< HEAD
  className="MuiListItem-root-11 MuiListItem-default-14 MuiListItem-gutters-18"
=======
  className="MuiListItem-root-11 MuiListItem-default-14 MuiListItem-gutters-19"
>>>>>>> abe0c27cbfbc48ff736e295ad073f2440bae9139
  disabled={false}
  onClick={undefined}
  style={
    Object {
      "width": 100,
    }
  }
/>
`;

exports[`ListItem with primary props 1`] = `
<li
<<<<<<< HEAD
  className="MuiListItem-root-11 MuiListItem-default-14 MuiListItem-gutters-18"
=======
  className="MuiListItem-root-11 MuiListItem-default-14 MuiListItem-gutters-19"
>>>>>>> abe0c27cbfbc48ff736e295ad073f2440bae9139
  disabled={false}
  onClick={undefined}
  primary="hello"
>
  <div
<<<<<<< HEAD
    className="MuiListItemText-root-22"
  >
    <span
      className="MuiTypography-root-28 MuiTypography-subheading-35 MuiListItemText-primary-25"
=======
    className="MuiListItemText-root-23"
  >
    <span
      className="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
>>>>>>> abe0c27cbfbc48ff736e295ad073f2440bae9139
    >
      hello
    </span>
    <p
<<<<<<< HEAD
      className="MuiTypography-root-28 MuiTypography-body1-37 MuiTypography-colorTextSecondary-61 MuiListItemText-secondary-26"
=======
      className="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
>>>>>>> abe0c27cbfbc48ff736e295ad073f2440bae9139
    >
      
    </p>
  </div>
  <div
<<<<<<< HEAD
    className="MuiListItemText-root-22"
  >
    <span
      className="MuiTypography-root-28 MuiTypography-subheading-35 MuiListItemText-primary-25"
=======
    className="MuiListItemText-root-23"
  >
    <span
      className="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
>>>>>>> abe0c27cbfbc48ff736e295ad073f2440bae9139
    >
      Hello
    </span>
  </div>
</li>
`;

exports[`ListItem with secondary props 1`] = `
<li
<<<<<<< HEAD
  className="MuiListItem-root-11 MuiListItem-default-14 MuiListItem-gutters-18"
=======
  className="MuiListItem-root-11 MuiListItem-default-14 MuiListItem-gutters-19"
>>>>>>> abe0c27cbfbc48ff736e295ad073f2440bae9139
  disabled={false}
  onClick={undefined}
  secondary="Hi"
>
  <div
<<<<<<< HEAD
    className="MuiListItemText-root-22"
  >
    <span
      className="MuiTypography-root-28 MuiTypography-subheading-35 MuiListItemText-primary-25"
=======
    className="MuiListItemText-root-23"
  >
    <span
      className="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
>>>>>>> abe0c27cbfbc48ff736e295ad073f2440bae9139
    >
      
    </span>
    <p
<<<<<<< HEAD
      className="MuiTypography-root-28 MuiTypography-body1-37 MuiTypography-colorTextSecondary-61 MuiListItemText-secondary-26"
=======
      className="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
>>>>>>> abe0c27cbfbc48ff736e295ad073f2440bae9139
    >
      Hi
    </p>
  </div>
  <div
<<<<<<< HEAD
    className="MuiListItemText-root-22"
  >
    <span
      className="MuiTypography-root-28 MuiTypography-subheading-35 MuiListItemText-primary-25"
=======
    className="MuiListItemText-root-23"
  >
    <span
      className="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
>>>>>>> abe0c27cbfbc48ff736e295ad073f2440bae9139
    >
      Hello
    </span>
  </div>
</li>
`;

exports[`ListSuheader with children props 1`] = `
<li
  className="MuiListSubheader-root-5 MuiListSubheader-sticky-10 MuiListSubheader-gutters-8"
>
  I am Header of list
</li>
`;
